--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cf-tool",
+  "name": "cf-upsolve",
   "version": "1.0.0",
-  "description": "",
+  "description": "Server of upsolve me",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "forever": "^3.0.0",
-    "mongoose": "^5.9.19",
-    "nodemon": "^2.0.4",
-    "request": "^2.88.2"
+    "express": "^4.18.2",
+    "forever": "^4.0.3",
+    "request": "^2.88.2",
+    "sqlite3": "^5.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
